// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 1`] = `
{
  "content": GithubWorkflow {
    "json": {
      "description": "Run CDK synth for a specific stack pattern and post results to PR",
      "inputs": {
        "cloud-assembly-directory": {
          "description": "The directory where the CDK cloud assembly should be synthesized to, must be the same as specified in the command",
          "required": true,
        },
        "command": {
          "description": "CDK synth command",
          "required": true,
        },
      },
      "name": "CDK Express Pipeline Synth Action",
      "runs": {
        "steps": [
          {
            "name": "Checkout repo",
            "uses": "actions/checkout@v4",
          },
          {
            "name": "Set up node",
            "uses": "actions/setup-node@v4",
            "with": {
              "cache": "npm",
              "node-version": 20,
            },
          },
          {
            "name": "Install dependencies",
            "run": "npm ci",
            "shell": "bash",
          },
          {
            "name": "CDK Synth",
            "run": "\${{ inputs.command }}",
            "shell": "bash",
          },
          {
            "name": "Cache Build",
            "uses": "actions/cache/save@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}-\${{ inputs.cloud-assembly-directory }}",
              "path": "\${{ inputs.cloud-assembly-directory }}/
node_modules/",
            },
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-synth/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 2`] = `
{
  "content": GithubWorkflow {
    "json": {
      "inputs": {
        "assume-region": {
          "description": "The AWS region to assume for the deploy operation",
          "required": true,
        },
        "assume-role-arn": {
          "description": "The ARN of the role to assume for the deploy operation",
          "required": true,
        },
        "cloud-assembly-directory": {
          "description": "The directory where the CDK cloud assembly is located",
          "required": true,
        },
        "command": {
          "description": "CDK diff command",
          "required": true,
        },
        "github-token": {
          "description": "GitHub token for posting comments",
          "required": true,
        },
        "job-name": {
          "description": "Name of the job, used to link to action/job logs in summaries",
          "required": false,
        },
        "stack-selector-patterns": {
          "description": "The value of the {stackSelector} replacement in the command",
          "required": true,
        },
      },
      "name": "CDK Diff Action",
      "runs": {
        "steps": [
          {
            "name": "Restore Build Cache",
            "uses": "actions/cache/restore@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}-\${{ inputs.cloud-assembly-directory }}",
              "path": "\${{ inputs.cloud-assembly-directory }}/
node_modules/",
            },
          },
          {
            "name": "Configure AWS credentials",
            "uses": "aws-actions/configure-aws-credentials@v4",
            "with": {
              "aws-region": "\${{ inputs.assume-region }}",
              "role-to-assume": "\${{ inputs.assume-role-arn }}",
            },
          },
          {
            "name": "CDK Diff Generate",
            "uses": "rehanvdm/cdk-express-pipeline-github-diff@v0.1.3",
            "with": {
              "cloud-assembly-directory": "\${{ inputs.cloud-assembly-directory }}",
              "github-token": "\${{ inputs.github-token }}",
              "job-name": "\${{ inputs.job-name }}",
              "mode": "generate",
              "stack-selectors": "\${{ inputs.stack-selector-patterns }}",
            },
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-diff/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 3`] = `
{
  "content": GithubWorkflow {
    "json": {
      "description": "Run CDK deploy for a specific stack pattern",
      "inputs": {
        "assume-region": {
          "description": "The AWS region to assume for the deploy operation",
          "required": true,
        },
        "assume-role-arn": {
          "description": "The ARN of the role to assume for the deploy operation",
          "required": true,
        },
        "cloud-assembly-directory": {
          "description": "The directory where the CDK cloud assembly is located",
          "required": true,
        },
        "command": {
          "description": "CDK deploy command",
          "required": true,
        },
        "stack-selector-patterns": {
          "description": "The value of the {stackSelector} replacement in the command",
          "required": true,
        },
      },
      "name": "CDK Deploy Action",
      "runs": {
        "steps": [
          {
            "name": "Restore Build Cache",
            "uses": "actions/cache/restore@v4",
            "with": {
              "key": "cache-build-\${{ github.sha }}-\${{ inputs.cloud-assembly-directory }}",
              "path": "\${{ inputs.cloud-assembly-directory }}/
node_modules/",
            },
          },
          {
            "name": "Configure AWS credentials",
            "uses": "aws-actions/configure-aws-credentials@v4",
            "with": {
              "aws-region": "\${{ inputs.assume-region }}",
              "role-to-assume": "\${{ inputs.assume-role-arn }}",
            },
          },
          {
            "name": "CDK Deploy Command",
            "run": "\${{ inputs.command }}",
            "shell": "bash",
          },
        ],
        "using": "composite",
      },
    },
  },
  "fileName": "actions/cdk-express-pipeline-deploy/action.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 4`] = `
{
  "content": GithubWorkflow {
    "json": {
      "jobs": {
        "diff__dev": {
          "name": "\${{ matrix.job-name }}",
          "needs": [
            "synth__dev",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-diff",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "job-name": "\${{ matrix.job-name }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- diff global_* --app=cdk.out/dev",
                  "job-name": "Diff dev - global",
                  "stack-selector-patterns": "global_*",
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/dev",
                  "command": "npm run cdk -- diff app_* --app=cdk.out/dev",
                  "job-name": "Diff dev - app",
                  "stack-selector-patterns": "app_*",
                },
              ],
            },
          },
        },
        "diff__prod": {
          "name": "\${{ matrix.job-name }}",
          "needs": [
            "synth__prod",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-diff",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "job-name": "\${{ matrix.job-name }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff global_* --app=cdk.out/prod",
                  "job-name": "Diff prod - global",
                  "stack-selector-patterns": "global_*",
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff app_* --app=cdk.out/prod",
                  "job-name": "Diff prod - app",
                  "stack-selector-patterns": "app_*",
                },
              ],
            },
          },
        },
        "print_diff": {
          "name": "Print Diff",
          "needs": [
            "diff__dev",
            "diff__prod",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Update PR Description",
              "uses": "rehanvdm/cdk-express-pipeline-github-diff@v0.1.3",
              "with": {
                "cloud-assemblies": "[{"header":"CDK Diff - dev","directory":"cdk.out/dev"},{"header":"CDK Diff - prod","directory":"cdk.out/prod"}]",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "mode": "print",
              },
            },
          ],
        },
        "synth__dev": {
          "name": "Synth dev",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
              "with": {
                "cloud-assembly-directory": "cdk.out/dev",
                "command": "npm run cdk -- synth '**' -c env=dev --output=cdk.out/dev",
              },
            },
          ],
        },
        "synth__prod": {
          "name": "Synth prod",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
              "with": {
                "cloud-assembly-directory": "cdk.out/prod",
                "command": "npm run cdk -- synth '**' -c env=prod --output=cdk.out/prod",
              },
            },
          ],
        },
      },
      "name": "CDK Express Pipeline Diff - Dev",
      "on": {
        "pull_request": {
          "branches": [
            "main",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-diff-dev.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 5`] = `
{
  "content": GithubWorkflow {
    "json": {
      "jobs": {
        "diff__prod": {
          "name": "\${{ matrix.job-name }}",
          "needs": [
            "synth__prod",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-diff",
              "with": {
                "assume-region": "\${{ matrix.assume-region }}",
                "assume-role-arn": "\${{ matrix.assume-role-arn }}",
                "cloud-assembly-directory": "\${{ matrix.cloud-assembly-directory }}",
                "command": "\${{ matrix.command }}",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "job-name": "\${{ matrix.job-name }}",
                "stack-selector-patterns": "\${{ matrix.stack-selector-patterns }}",
              },
            },
          ],
          "strategy": {
            "fail-fast": false,
            "matrix": {
              "include": [
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff global_* --app=cdk.out/prod",
                  "job-name": "Diff prod - global",
                  "stack-selector-patterns": "global_*",
                },
                {
                  "assume-region": "us-east-1",
                  "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                  "cloud-assembly-directory": "cdk.out/prod",
                  "command": "npm run cdk -- diff app_* --app=cdk.out/prod",
                  "job-name": "Diff prod - app",
                  "stack-selector-patterns": "app_*",
                },
              ],
            },
          },
        },
        "print_diff": {
          "name": "Print Diff",
          "needs": [
            "diff__prod",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
            "pull-requests": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Update PR Description",
              "uses": "rehanvdm/cdk-express-pipeline-github-diff@v0.1.3",
              "with": {
                "cloud-assemblies": "[{"header":"CDK Diff - prod","directory":"cdk.out/prod"}]",
                "github-token": "\${{ secrets.GITHUB_TOKEN }}",
                "mode": "print",
              },
            },
          ],
        },
        "synth__prod": {
          "name": "Synth prod",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
              "with": {
                "cloud-assembly-directory": "cdk.out/prod",
                "command": "npm run cdk -- synth '**' -c env=prod --output=cdk.out/prod",
              },
            },
          ],
        },
      },
      "name": "CDK Express Pipeline Diff - Prod",
      "on": {
        "pull_request": {
          "branches": [
            "production",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-diff-prod.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 6`] = `
{
  "content": GithubWorkflow {
    "json": {
      "concurrency": {
        "cancel-in-progress": false,
        "group": "cdk-express-pipeline-deploy-dev",
      },
      "jobs": {
        "deploy__dev__app": {
          "name": "[dev] 🌊 app",
          "needs": [
            "deploy__dev__global",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Deploy",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "us-east-1",
                "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                "cloud-assembly-directory": "cdk.out/dev",
                "command": "npm run cdk -- deploy app_* --app=cdk.out/dev --concurrency 10 --require-approval never --exclusively",
                "stack-selector-patterns": "app_*",
              },
            },
          ],
        },
        "deploy__dev__global": {
          "name": "[dev] 🌊 global",
          "needs": [
            "synth__dev",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Deploy",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "us-east-1",
                "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                "cloud-assembly-directory": "cdk.out/dev",
                "command": "npm run cdk -- deploy global_* --app=cdk.out/dev --concurrency 10 --require-approval never --exclusively",
                "stack-selector-patterns": "global_*",
              },
            },
          ],
        },
        "synth__dev": {
          "name": "Synth dev",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
              "with": {
                "cloud-assembly-directory": "cdk.out/dev",
                "command": "npm run cdk -- synth '**' -c env=dev --output=cdk.out/dev",
              },
            },
          ],
        },
      },
      "name": "CDK Express Pipeline Deploy - Dev",
      "on": {
        "pull_request": {
          "branches": [
            "main",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-deploy-dev.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot all workflows for config 7`] = `
{
  "content": GithubWorkflow {
    "json": {
      "concurrency": {
        "cancel-in-progress": false,
        "group": "cdk-express-pipeline-deploy-prod",
      },
      "jobs": {
        "deploy__prod__app": {
          "name": "[prod] 🌊 app",
          "needs": [
            "deploy__prod__global",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Deploy",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "us-east-1",
                "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                "cloud-assembly-directory": "cdk.out/prod",
                "command": "npm run cdk -- deploy app_* --app=cdk.out/prod --concurrency 10 --require-approval never --exclusively",
                "stack-selector-patterns": "app_*",
              },
            },
          ],
        },
        "deploy__prod__global": {
          "name": "[prod] 🌊 global",
          "needs": [
            "synth__prod",
          ],
          "permissions": {
            "actions": "write",
            "contents": "write",
            "id-token": "write",
          },
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Deploy",
              "uses": "./.github/actions/cdk-express-pipeline-deploy",
              "with": {
                "assume-region": "us-east-1",
                "assume-role-arn": "arn:aws:iam::581184285249:role/githuboidc-git-hub-deploy-role",
                "cloud-assembly-directory": "cdk.out/prod",
                "command": "npm run cdk -- deploy global_* --app=cdk.out/prod --concurrency 10 --require-approval never --exclusively",
                "stack-selector-patterns": "global_*",
              },
            },
          ],
        },
        "synth__prod": {
          "name": "Synth prod",
          "runs-on": "ubuntu-latest",
          "steps": [
            {
              "name": "Checkout repo",
              "uses": "actions/checkout@v4",
            },
            {
              "name": "Run CDK Express Pipeline Synth",
              "uses": "./.github/actions/cdk-express-pipeline-synth",
              "with": {
                "cloud-assembly-directory": "cdk.out/prod",
                "command": "npm run cdk -- synth '**' -c env=prod --output=cdk.out/prod",
              },
            },
          ],
        },
      },
      "name": "CDK Express Pipeline Deploy - Prod",
      "on": {
        "pull_request": {
          "branches": [
            "production",
          ],
        },
      },
    },
  },
  "fileName": "workflows/cdk-express-pipeline-deploy-prod.yml",
}
`;

exports[`CDK Express Pipeline CI Configuration snapshot diff stack selector variants: stage 1`] = `
[
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff global_us-east-1_* --app=cdk.out/dev",
    "job-name": "Diff dev - global__us_east_1",
    "stack-selector-patterns": "global_us-east-1_*",
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_us-east-1_* --app=cdk.out/dev",
    "job-name": "Diff dev - app__us_east_1",
    "stack-selector-patterns": "app_us-east-1_*",
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_eu-west-1_* --app=cdk.out/dev",
    "job-name": "Diff dev - app__eu_west_1",
    "stack-selector-patterns": "app_eu-west-1_*",
  },
]
`;

exports[`CDK Express Pipeline CI Configuration snapshot diff stack selector variants: wave 1`] = `
[
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff global_* --app=cdk.out/dev",
    "job-name": "Diff dev - global",
    "stack-selector-patterns": "global_*",
  },
  {
    "assume-region": "",
    "assume-role-arn": "",
    "cloud-assembly-directory": "cdk.out/dev",
    "command": "npm run cdk -- diff app_* --app=cdk.out/dev",
    "job-name": "Diff dev - app",
    "stack-selector-patterns": "app_*",
  },
]
`;
